--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,10 @@
 p {
     margin: 0px;
 }
+
+.experienceChoice {
+    display: inline-flex; 
+    flex-direction: column; 
+    width: 20px; 
+    text-align: center;
+}
