make skills and attribute selections functional, restructured cultures JSONs

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,15 @@ p {
     margin: 0px;
 }
 
-.experienceChoice {
+.experiencechoice {
     display: inline-flex; 
     flex-direction: column; 
-    width: 20px; 
     text-align: center;
+}
+
+.experiencechoicecontainer {
+    display: grid; 
+    grid-template-columns: 100px auto;
+    justify-content: left;
+    align-items: center;
 }
